--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<h1> {{ title }}</h1>
+    <div class="container">
+        <app-clients> </app-clients>
+    </div>
 <app-footer></app-footer>
