--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,1 +1,25 @@
-<p>clients works!</p>
+<h1>List of clients</h1>
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Created At</th>
+                <th>Updated At</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let client of clients">
+                <td> {{ client.id }} </td>
+                <td> {{ client.firstName }} </td>
+                <td> {{ client.lastName }} </td>
+                <td> {{ client.email }} </td>
+                <td> {{ client.createdAt }} </td>
+                <td> {{ client.updatedAt }} </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
