--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,14 +7,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <li class="nav-item" >
+                    <a class="nav-link" routerLink="/directives" routerLinkActive="active">Directives</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Client</a>
+                <li class="nav-item" >
+                    <a class="nav-link" routerLink="/clients"  routerLinkActive="active">Clients</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Product</a>
+                <li class="nav-item"  >
+                    <a class="nav-link" href="#" routerLinkActive="active">Product</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
