routing and navigation client form

--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,4 +1,9 @@
 <h1>List of clients</h1>
+
+<div class="my-2 text-left">
+    <button class="btn btn-rounded btn-outline-primary" type="button" [routerLink]="['/clients/form']">New </button>
+</div>  
+
 <div class="table-responsive">
     <table class="table table-striped">
         <thead>
