--- a/src/app/clients/form/form.component.html
+++ b/src/app/clients/form/form.component.html
@@ -1,26 +1,26 @@
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-white mt-5">
     <div class="card-header">{{title}}</div>
     <div class="card-body">
         <form (ngSubmit)="create()">
-            <div class="form-group row">
+            <div class="form-group row mt-3">
                 <label for="firstName" class="col-form-label col-sm-2">First Name</label>
                 <div class="col-sm-6">
                     <input type="text" name="firstName" id="firstName" class="form-control" [(ngModel)]="client.firstName">
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mt-3">
                 <label for="LastName" class="col-form-label col-sm-2">Last Name</label>
                 <div class="col-sm-6">
                     <input type="text" name="LastName" id="LastName" class="form-control" [(ngModel)]="client.lastName">
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mt-3">
                 <label for="email" class="col-form-label col-sm-2">Email</label>
                 <div class="col-sm-6">
                     <input type="email" name="email" id="email" class="form-control" [(ngModel)]="client.email">
                 </div>
             </div>
-            <div class="from-group row">
+            <div class="from-group row mt-3">
                 <div class="col-sm-6">
                     <button class="btn btn-primary" role="button">Create</button>
                 </div>
