--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -2,7 +2,7 @@
 
 <div class="my-2 text-left">
     <button class="btn btn-rounded btn-outline-primary" type="button" [routerLink]="['/clients/form']">New </button>
-</div>  
+</div>
 
 <div class="table-responsive">
     <table class="table table-striped">
@@ -14,6 +14,8 @@
                 <th>Email</th>
                 <th>Created At</th>
                 <th>Updated At</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -24,6 +26,12 @@
                 <td> {{ client.email }} </td>
                 <td> {{ client.createdAt }} </td>
                 <td> {{ client.updatedAt }} </td>
+                <td>
+                    <button type="button" name="button" [routerLink]="['/clients/form', client.id]"
+                        class="btn btn-outline-warning">
+                        Edit
+                    </button>
+                </td>
             </tr>
         </tbody>
     </table>
