--- a/src/app/clients/form/form.component.html
+++ b/src/app/clients/form/form.component.html
@@ -1,7 +1,7 @@
 <div class="card bg-dark text-white mt-5">
     <div class="card-header">{{title}}</div>
     <div class="card-body">
-        <form (ngSubmit)="create()">
+        <form>
             <div class="form-group row mt-3">
                 <label for="firstName" class="col-form-label col-sm-2">First Name</label>
                 <div class="col-sm-6">
@@ -22,7 +22,10 @@
             </div>
             <div class="from-group row mt-3">
                 <div class="col-sm-6">
-                    <button class="btn btn-primary" role="button">Create</button>
+                    <button class="btn btn-primary" role="button" (click)="create()" *ngIf="!client.id else btnUpdate">Create</button>
+                    <ng-template #btnUpdate>
+                        <button class="btn btn-warning" role="button" (click)="update()" >Edit</button>
+                    </ng-template>
                 </div>
             </div>
         </form>
