--- a/src/app/clients/form/form.component.html
+++ b/src/app/clients/form/form.component.html
@@ -1,3 +1,9 @@
+<ul class="alert alert-danger" *ngIf="errors?.length > 0">
+    <li *ngFor="let err of errors">
+        {{ err }}
+    </li>
+</ul>
+
 <div class="card bg-dark text-white mt-5">
     <div class="card-header">{{title}}</div>
     <div class="card-body">
@@ -5,8 +11,8 @@
             <div class="form-group row mt-3">
                 <label for="firstName" class="col-form-label col-sm-2">First Name</label>
                 <div class="col-sm-6">
-                    <input type="text" name="firstName" id="firstName" class="form-control" required
-                        [(ngModel)]="client.firstName" minlength="3" #firstName="ngModel">
+                    <input type="text" name="firstName" id="firstName" class="form-control"
+                        [(ngModel)]="client.firstName" #firstName="ngModel">
                     <div class="alert alert-danger" *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)">
                         <div *ngIf="firstName.errors.required">
                             First Name is required
@@ -20,8 +26,8 @@
             <div class="form-group row mt-3">
                 <label for="LastName" class="col-form-label col-sm-2">Last Name</label>
                 <div class="col-sm-6">
-                    <input type="text" name="LastName" id="LastName" class="form-control" required
-                        [(ngModel)]="client.lastName" minlength="3" #lastName="ngModel">
+                    <input type="text" name="LastName" id="LastName" class="form-control"
+                        [(ngModel)]="client.lastName"  #lastName="ngModel">
                     <div class="alert alert-danger" *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)">
                         <div *ngIf="lastName.errors.required">
                             Last Name is required
@@ -35,7 +41,7 @@
             <div class="form-group row mt-3">
                 <label for="email" class="col-form-label col-sm-2">Email</label>
                 <div class="col-sm-6">
-                    <input type="email" name="email" id="email" class="form-control" required email
+                    <input type="email" name="email" id="email" class="form-control"
                         [(ngModel)]="client.email" #email="ngModel">
                     <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
                         <div *ngIf="email.errors.required">
