--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -25,10 +25,10 @@
         <tbody>
             <tr *ngFor="let client of clients">
                 <td> {{ client.id }} </td>
-                <td> {{ client.firstName }} </td>
+                <td> {{ client.firstName | uppercase }} </td>
                 <td> {{ client.lastName }} </td>
                 <td> {{ client.email }} </td>
-                <td> {{ client.createdAt }} </td>
+                <td> {{ client.createdAt | date:"EEEE dd, MMMM yyyy"}} </td>
                 <td> {{ client.updatedAt }} </td>
                 <td>
                     <button type="button" name="edit" [routerLink]="['/clients/form', client.id]"
